--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
     "astro": "^5.10.1",
+    "lenis": "^1.3.4",
     "tailwindcss": "^4.1.11"
   }
 }
